2008-03-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_c_bars) docs/gnuplot.doc:  The docs state that if
	(close > open) then the candlestick is drawn with 3 vertical bars.  This
	is backwards.  The convention is that (close > open) is good, and the
	box is empty; (close < open) is bad, and the box is filled. Correct the
	documentation to match actual practice.  And correct the code so that
	extra lines are drawn in the boder color for solid-fill candlesticks.

2008-03-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/contour.c src/pm3d.c src/plot2d.c src/datafile.c src/parse.c:
	Yet more cleanup of dead code and outdated comments.

	* src/misc.c (need_fill_border) src/misc.h src/graphics.c:
	When "set style increment user" is in effect, apply it to the "border"
	linetype of a fillstyle.  New helper routine need_fill_border() to
	determine when this is needed and simplify the call sites.

2008-03-30  Allin Cottrell <cottrell@wfu.edu>

	* src/command.c (help_command): Fix incorrect nesting of #if clauses
	from removal of atari support.

	* src/set.c (set_logscale): The logscale base was being incorrectly 
	truncated to an integer.

2008-03-29  Ethan A Merritt  <merritt@u.washington.edu>

	* NEWS config/README config/makefile.amg config/makefile.mto
	config/makefile.st config/makefile.unx config/term_pc.h configure.in
	docs/Makefile.in docs/doc2texi.el docs/gnuplot.doc docs/gpcard.tex
	src/command.c src/corplot.c src/fit.c src/gnuplot.prj src/gp_types.h
	src/help.c src/internal.c src/makefile.all src/makefile.awc src/plot.c
	src/plot.h src/readline.c src/readline.h src/show.c src/standard.c
	src/syscfg.h src/term.c src/term.h src/variable.c term/atariaes.trm
	term/atarivdi.trm term/multitos.trm:

	Remove code specific to atari platforms.  The most recent serious
	mention of gnuplot that I could find on an atari newsgroup was a 1997
	post by Theo Hopman that gnuplot 3.6beta could be compiled.